<?xml version="1.0"?>
<package format="3">
	  <name>bt_demo</name>
	    <version>0.0.1</version>
	      <description>ROS 2 Behavior Tree demo (py_trees) + launch_testing</description>
		  <license>Apache-2.0</license>

		    <buildtool_depend>ament_cmake</buildtool_depend>
		      <buildtool_depend>ament_cmake_python</buildtool_depend>

		        <depend>rclpy</depend>
			  <depend>std_msgs</depend>
			    <depend>py_trees</depend>

			      <test_depend>launch_testing_ament_cmake</test_depend>
			        <test_depend>launch_testing_ros</test_depend>

				  <export>
					      <build_type>ament_cmake</build_type>
					        </export>
					</package>

